--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.artillexstudios</groupId>
@@ -88,52 +89,8 @@
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
         <repository>
-            <id>placeholderapi</id>
-            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
-        </repository>
-        <repository>
-            <id>CodeMC</id>
-            <url>https://repo.codemc.org/repository/maven-public/</url>
-        </repository>
-        <repository>
-            <id>essentials-releases</id>
-            <url>https://repo.essentialsx.net/releases/</url>
-        </repository>
-        <repository>
-            <id>papermc-repo</id>
-            <url>https://repo.papermc.io/repository/maven-public/</url>
-        </repository>
-        <repository>
-            <id>rosewood-repo</id>
-            <url>https://repo.rosewooddev.io/repository/public/</url>
-        </repository>
-        <repository>
             <id>sk89q-repo</id>
             <url>https://maven.enginehub.org/repo/</url>
-        </repository>
-        <repository>
-            <id>bg-repo</id>
-            <url>https://repo.bg-software.com/repository/api/</url>
-        </repository>
-        <repository>
-            <id>william278.net</id>
-            <url>https://repo.william278.net/releases</url>
-        </repository>
-        <repository>
-            <id>glaremasters repo</id>
-            <url>https://repo.glaremasters.me/repository/towny/</url>
-        </repository>
-        <repository>
-            <id>maven</id>
-            <url>https://repo1.maven.org/maven2/</url>
-        </repository>
-        <repository>
-            <id>bg-software</id>
-            <url>https://repo.bg-software.com/repository/dependencies/</url>
-        </repository>
-        <repository>
-            <id>nightexpress-releases</id>
-            <url>https://repo.nightexpressdev.com/releases/</url>
         </repository>
     </repositories>
 
@@ -158,41 +115,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>me.clip</groupId>
-            <artifactId>placeholderapi</artifactId>
-            <version>2.11.6</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.Zrips.CMI</groupId>
-            <artifactId>CMI</artifactId>
-            <version>LATEST</version>
-            <systemPath>${project.basedir}/libs/CMI-API9.5.0.8.jar</systemPath>
-            <scope>system</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.Zrips.CMILib</groupId>
-            <artifactId>CMILib</artifactId>
-            <version>LATEST</version>
-            <systemPath>${project.basedir}/libs/CMILib1.4.1.2.jar</systemPath>
-            <scope>system</scope>
-        </dependency>
-        <dependency>
             <groupId>com.github.Gypopo</groupId>
             <artifactId>EconomyShopGUI-API</artifactId>
             <version>1.7.1</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.github.brcdev-minecraft</groupId>
-            <artifactId>shopgui-api</artifactId>
-            <version>3.0.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>net.essentialsx</groupId>
-            <artifactId>EssentialsX</artifactId>
-            <version>2.19.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -202,161 +127,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.black_ixx</groupId>
-            <artifactId>playerpoints</artifactId>
-            <version>3.2.6</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>su.nightexpress.coinsengine</groupId>
-            <artifactId>CoinsEngine</artifactId>
-            <version>2.2.0</version>
-            <systemPath>${project.basedir}/libs/CoinsEngine-2.2.0.jar</systemPath>
-            <scope>system</scope>
-        </dependency>
-        <dependency>
-            <groupId>me.qKing12.RoyaleEconomy</groupId>
-            <artifactId>RoyaleEconomy</artifactId>
-            <version>1.4.4</version>
-            <systemPath>${project.basedir}/libs/RoyaleEconomyAPI.jar</systemPath>
-            <scope>system</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.bekvon</groupId>
-            <artifactId>Residence</artifactId>
-            <version>5.1.4.0</version>
-            <systemPath>${project.basedir}/libs/Residence5.1.4.0.jar</systemPath>
-            <scope>system</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.intellectualsites.plotsquared</groupId>
-            <artifactId>plotsquared-core</artifactId>
-            <version>7.0.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.intellectualsites.plotsquared</groupId>
-            <artifactId>plotsquared-bukkit</artifactId>
-            <version>7.0.0</version>
-            <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <artifactId>plotsquared-core</artifactId>
-                    <groupId>*</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.kingdoms</groupId>
-            <artifactId>Kingdoms</artifactId>
-            <version>1.3.0</version>
-            <systemPath>${project.basedir}/libs/KingdomsX-1.16.14.1.jar</systemPath>
-            <scope>system</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.github.angeschossen</groupId>
-            <artifactId>LandsAPI</artifactId>
-            <version>6.29.12</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>world.bentobox</groupId>
-            <artifactId>bentobox</artifactId>
-            <version>1.20.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>com.sk89q.worldguard</groupId>
             <artifactId>worldguard-bukkit</artifactId>
             <version>7.1.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.bgsoftware</groupId>
-            <artifactId>SuperiorSkyblockAPI</artifactId>
-            <version>2023.2</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.iridium.iridiumskyblock</groupId>
-            <artifactId>iridiumskyblock</artifactId>
-            <version>LATEST</version>
-            <systemPath>${project.basedir}/libs/IridiumSkyblock-4.1.0.jar</systemPath>
-            <scope>system</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.github.TechFortress</groupId>
-            <artifactId>GriefPrevention</artifactId>
-            <version>16.18.2</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.artillexstudios</groupId>
-            <artifactId>AxGensAPI</artifactId>
-            <version>13</version>
-            <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>*</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>com.github.DeadSilenceIV</groupId>
-            <artifactId>AdvancedChestsAPI</artifactId>
-            <version>3.2-BETA</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>net.william278.husktowns</groupId>
-            <artifactId>husktowns-bukkit</artifactId>
-            <version>3.0.2</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>net.william278.huskclaims</groupId>
-            <artifactId>huskclaims-bukkit</artifactId>
-            <version>1.3.5</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.palmergames.bukkit.towny</groupId>
-            <artifactId>towny</artifactId>
-            <version>0.100.1.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>me.sat7</groupId>
-            <artifactId>dynamicshop</artifactId>
-            <version>3.16.1</version>
-            <systemPath>${project.basedir}/libs/DynamicShop-3.16.1.jar</systemPath>
-            <scope>system</scope>
-        </dependency>
-        <dependency>
-            <groupId>su.nightexpress.nightcore</groupId>
-            <artifactId>nightcore</artifactId>
-            <version>2.7.3</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>su.nightexpress.excellentshop</groupId>
-            <artifactId>Core</artifactId>
-            <version>4.20.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>me.crafter.mc.lockettepro</groupId>
-            <artifactId>LockettePro</artifactId>
-            <version>LATEST</version>
-            <systemPath>${project.basedir}/libs/LockettePro-2.11.1.jar</systemPath>
-            <scope>system</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.github.SaberLLC</groupId>
-            <artifactId>Saber-Factions</artifactId>
-            <version>4.1.4-STABLE</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
